--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -169,7 +169,7 @@
 																Product Listing </a></li>
 														<li><a tabindex="-1" href="product-details.html">
 																Product Details</a></li>
-														<li><a tabindex="-1" href="cart.html"> Cart </a></li>
+														<li><a tabindex="-1" href="cart.html"> Cart<span id="cart-info"></span> </a></li>
 														<li><a tabindex="-1" href="checkout.html"> Check
 																Out</a></li>
 														<li><a tabindex="-1" href="register.html"> Login</a></li>
@@ -1474,6 +1474,8 @@
 	<script src="js/custom.js"></script>
 	<!-- Custom -->
 	<script src="js/lib/hogan2.js"></script>
+	<script src="js/controller.js"></script>
 	<script src="js/home/home.js"></script>
+	
 </body>
 </html>
